# avpz-backend

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: pytest.yml
PROJECT/: config.py  dependencies.py  main.py
PROJECT/models/: booking.py  hotel.py  payment.py  review.py  room.py  session.py  user.py
PROJECT/routes/: auth.py  hotels.py  user.py
PROJECT/schemas/: auth.py  hotels.py  user.py
PROJECT/utils/: jwt.py  mfa.py
hhb/: config.py  dependencies.py  main.py
hhb/models/: __init__.py  booking.py  hotel.py  hotel_admin.py  payment.py  review.py  room.py  session.py  user.py
hhb/routes/: auth.py  bookings.py  hotels.py  rooms.py  user.py
hhb/routes/admin/: __init__.py  bookings.py  hotels.py  rooms.py  users.py
hhb/schemas/: admin.py  auth.py  bookings.py  common.py  hotels.py  rooms.py  user.py
hhb/utils/: create_test_data.py  jwt.py  multiple_errors_exception.py  paypal.py
tests/: conftest.py  paypal_mock.py  test_admin_rooms.py  test_admin_users.py  test_auth.py  test_bookings.py  test_empty.py  test_hotel_admins.py  test_hotels.py  test_other.py  test_rooms.py  test_user.py
