[tool.poetry]
name = "avpz-backend"
version = "0.1.0"
description = ""
authors = ["RuslanUC <dev_ruslan_uc@protonmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.31.0"
fastapi = "^0.115.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-report=xml --cov-append --cov=tests"  # TODO: replace --cov=tests --cov=<PROJECT>

[tool.coverage.run]
data_file = "coverage.coverage"